Add a quote on architecture

--- a/quote.html
+++ b/quote.html
@@ -4,6 +4,16 @@
 </head>
 <body>
 
+  <div class="blockquote-wrapper">
+    <div class="blockquote">
+      <h1>
+        Architecture represents the signicant design decisions that shape a system, where significant is measured by cost of change.   
+</h1> 
+<h4>&mdash;Grady Booch</h4>
+    </div>
+  </div>
+
+
 
   <div class="blockquote-wrapper">
     <div class="blockquote">
@@ -14,9 +24,6 @@
     </div>
   </div>
 
-  ”
-
-– Brené Brown
 
   <div class="blockquote-wrapper">
     <div class="blockquote">
